docs(ch9/talos-ai-operator): record the proven bare-metal run + the two wiring lessons
Built, ran, and proved the plugin end-to-end on a real bare-metal Talos cluster.
Update README/DESIGN to the now-known truths:

- Air-gap is proven: model loads from the baked GGUF with no network
  (HuggingFaceModels.downloadIfAbsent short-circuits on Files.exists before
  dereferencing the file:// URL; READY ~3.2s).
- /v1/chat/completions served a real local completion; /review?cluster=dev
  executed health.py against the live cluster off a structured tool call.
- Lesson 1: you must run the tool-execution loop yourself — the mochallama
  spring-ai adapter only surfaces the tool-call request (ToolCallingManager loop).
- Lesson 2: pin temperature(0.0) or a small model narrates tool calls as prose
  JSON instead of emitting the structured <tool_call> the parser detects.
- Keep the honest caveat: a 1.5B model paraphrases the tool JSON loosely in its
  summary; serving/execution are correct, fidelity needs a 3B+ model.
- Verified build: ~5.31GB image, JDK22 FFM (--enable-native-access).
- No throughput numbers (none measured); proof is qualitative.